kube/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-hello
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-hello
    spec:
      containers:
      - name: k8s-hello
        image: eapm-lnx-30.cisco.com:5000/anurag-test/k8s-hello:1
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /hello
            port: 8080
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
