kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-hello-service
  labels:
    app: k8s-hello
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: k8s-hello
date
