kube/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-hello-tls
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - myminikube.info
    secretName: myminikube.info.tls
  rules:
  - host: myminikube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-hello-service
          servicePort: 8080
